2010-04-15  Glenn Morris  <rgm@gnu.org>

	* progmodes/verilog-mode.el (verilog-forward-sexp): Avoid free variable.

2010-04-15  Juanma Barranquero  <lekktu@gmail.com>

	Simplify by using `define-derived-mode'.
	* info.el (Info-mode):
	* calendar/todo-mode.el (todo-mode):
	* play/gomoku.el (gomoku-mode): Define with `define-derived-mode'.
	(gomoku-mode-map): Move initialization into declaration.

2010-04-14  Michael Albinus  <michael.albinus@gmx.de>

	Fix Bug#5840.
	* ido.el (ido-file-name-all-completions-1):
	* minibuffer.el (minibuffer-completion-help):
	* net/tramp.el (tramp-completion-mode-p): Use `non-essential'.

2010-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (non-essential): New var.

	Add a new field `location' to bookmarks for non-file bookmarks.
	* bookmark.el (bookmark-location): Use the new field, if present.
	(bookmark-insert-location): Undo last change, not needed any more.
	* man.el (Man-bookmark-make-record):
	* woman.el (woman-bookmark-make-record): Add `location' field.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* simple.el (scroll-error-top-bottom): New defcustom.
	(scroll-up-command, scroll-down-command): Use it.  Doc fix.

	* emulation/pc-select.el (pc-select-override-scroll-error):
	Obsolete in favor of `scroll-error-top-bottom'.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* tutorial.el (tutorial--default-keys): Rebind `C-v' to
	`scroll-up-command' and `M-v' to `scroll-down-command'.

	* emulation/cua-rect.el (cua--init-rectangles):
	* forms.el (forms--change-commands):
	* image-mode.el (image-mode-map):
	Remap scroll-down-command and scroll-up-command
	in addition to scroll-down and scroll-up.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* mwheel.el (scroll-preserve-screen-position-commands):
	Add mwheel-scroll to this list of commands.

	* simple.el (scroll-preserve-screen-position-commands):
	Add scroll-up-command, scroll-down-command, scroll-up-line,
	scroll-down-line to this list of commands.
